examples/test/testpolicy446.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy446
  namespace: namespace444
spec:
  podSelector:
    matchLabels:
      key5: value7
      key6: value29
      key21: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value44
          key5: value25
      podSelector:
        matchLabels:
          key2: value32
